# tech-news-summary

./: .gitignore  main.py  pyproject.toml  telegram_sender.py
